# quantum-demo

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json  quantum_test.js  setup.sh  test_credentials.js
circuits/gnark_groth16/: circuit.go  go.mod  go.sum  main.go
circuits/gnark_plonk/: circuit.go  go.mod  go.sum
circuits/halo2_kzg/: Cargo.toml
circuits/halo2_kzg/circuit_data/: instances.json  protocol.json  sg2.json
circuits/halo2_kzg/src/: main.rs
circuits/halo2_kzg_evm/: Cargo.toml
circuits/halo2_kzg_evm/circuit_data/: instances.json  protocol.json  sg2.json
circuits/halo2_kzg_evm/src/: main.rs
circuits/halo2_kzg_evm/src/configs/: example_recursion.json
circuits/nitro_attestation/: Cargo.toml
circuits/nitro_attestation/src/: lib.rs  main.rs
circuits/plonky2/: Cargo.toml
circuits/plonky2/src/: main.rs
circuits/risc0/: Cargo.toml
circuits/risc0/circuit_data/: method_id.json  receipt.json
circuits/risc0/methods/: Cargo.toml
circuits/risc0/methods/src/: main.rs
circuits/risc0/src/: main.rs
circuits/snarkjs_groth16/: build.sh  circuit.circom  circuit.r1cs  circuit.sym  circuit_0000.zkey  circuit_0001.zkey
circuits/snarkjs_groth16/circuit_cpp/: circuit.cpp
circuits/snarkjs_groth16/circuit_data/: proof.json  verification_key.json
circuits/snarkjs_groth16/circuit_js/: circuit.wasm  input.json
circuits/sp1/: Cargo.toml
circuits/sp1/elf/: riscv32im-succinct-zkvm-elf
circuits/sp1/program/: Cargo.toml
circuits/sp1/program/circuits/sp1/elf/: riscv32im-succinct-zkvm-elf
circuits/sp1/program/src/: main.rs
circuits/sp1/src/: main.rs
circuits/sudoku_groth16/: build.sh  circuit.circom  input.json
