[package]
name = "halo2_kzg"
version = "0.1.0"
edition = "2021"

[dependencies]
snark-verifier = { git = "https://github.com/axiom-crypto/snark-verifier.git", tag = "v0.1.7-git", default-features = false, features = [
  "loader_halo2",
] }
serde_json = "1.0.132"
serde = "1.0.214"
rand_chacha = "0.3.1"
ark-std = { version = "0.3.0", features = ["print-trace"] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", default-features = false, optional = true }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", default-features = false }

[features]
default = ["loader_halo2", "halo2-axiom", "display"]
display = ["halo2-base/display", "halo2-ecc?/display"]
loader_halo2 = ["halo2-ecc"]
halo2-axiom = ["halo2-base/halo2-axiom", "halo2-ecc?/halo2-axiom"]
