[package]
name = "risc0"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build.workspace = true

[dependencies]
serde_json = "1.0.132"
risc0-zkvm = { version = "=1.1.1", default-features = false, features = ["std", "prove"] }
bincode = "1.3.3"

[package.metadata.risc0]
methods = ["methods"]
