[package]
name = "risc0"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build.workspace = true

[dependencies]
serde_json = { workspace = true }
risc0-zkvm = { version = "=1.1.1", default-features = false, features = ["std", "prove"] }
bincode = { workspace = true }

[package.metadata.risc0]
methods = ["methods"]
